# mtcs_games

./: .gitignore  LICENSE.txt  Makefile  README.md  TODO.md  pyproject.toml  pyrightconfig.json
src/bases/: base_game.py  base_player.py  game_base.py  move.py  move_base.py  player_base.py  square.py  square_base.py  types.py
src/games/: game_connect4.py  game_othello.py  game_tictactoe.py
src/players/: player_human.py  player_human_cooked.py  player_mtcs.py  player_random.py
src/protocols/: game_protocol.py  player_protocol.py  types.py
tmp/: test_menu.py
