[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project]
name = "mtcs_games"
version = "0.1.0"
description = "A collection of two-player games using the Monte Carlo Tree Search (MCTS) algorithm."
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "argparse==1.4.0",
    "colorama==0.4.6",
    "simple_term_menu==1.6.6"
]
requires-python = "~=3.10"


# Configuration for the Black code formatter 
[tool.black]
line-length = 160   # to match the 79 character limit of PEP 8, but allow some extra space for longer lines
